<resources>
    <string name="app_name">Movie And Show List</string>
    <string name="movie">Movies</string>
    <string name="show">TV Shows</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dateline">Dateline</string>
    <string name="by_hardiansyah">by Hardiansyah</string>
    <string name="year">year</string>
    <string name="synopsis">Synopsis</string>
    <string name="casts">Casts</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="runtime">Runtime: </string>
    <string name="release_date">Release Date: </string>
    <string name="runtime_minutes">%1$s minutes</string>
    <string name="number_of_seasons">Number of Seasons: </string>
    <string name="first_air_date">First Air Date: </string>
</resources>