<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:contentDescription="@string/movie_poster"
            android:src="@color/colorImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/year"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvReleaseDateLabel"
            app:layout_constraintStart_toEndOf="@+id/tvReleaseDateLabel" />

        <TextView
            android:id="@+id/tvSynopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:maxLines="8"
            android:text="@string/synopsis"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvYear" />

        <TextView
            android:id="@+id/tvRuntimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/runtime"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvRuntimeLabel"
            app:layout_constraintStart_toEndOf="@+id/tvRuntimeLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCasts"
            tools:listitem="@layout/item_cast_list">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvCasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/casts"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/release_date"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvTagline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>